--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
 </head>
 
 <body>
-
+    <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+        <div class="flipper">
+            <div class="front">
+                <!-- front content -->
+            </div>
+            <div class="back">
+                <!-- back content -->
+            </div>
+        </div>
+    </div>
 
 </body>
 <footer>
