--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 </body>
 <footer>
-    <script src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
 </footer>
 
 </html>
